# Muha_blog

final_blogapi/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test_fix.py
final_blogapi/alembic/: env.py
final_blogapi/alembic/versions/: 0001_init.py
final_blogapi/database/: ddl.sql  init_db.py  session.py
final_blogapi/models/: __init__.py  db_models.py
final_blogapi/routers/: __init__.py  auth.py  categories_api.py  deps.py  html_routes.py  posts_api.py  subscriptions_api.py  users_api.py  ws.py
final_blogapi/schemas/: __init__.py  auth.py  categories.py  comments.py  posts.py  users.py
final_blogapi/services/: __init__.py  auth_service.py  category_service.py  comment_service.py  favorite_service.py  post_service.py  realtime.py  search_cache.py  subscription_service.py  user_service.py
final_blogapi/static/: sw.js
final_blogapi/static/css/: main.css
final_blogapi/static/js/: main.js
final_blogapi/templates/: admin_dashboard.html  base.html  create_post.html  edit_post.html  favorites.html  index.html  post.html  profile.html  users.html
final_blogapi/templates/auth/: login.html  register.html
final_blogapi/tests/: conftest.py  test_auth.py  test_posts.py  test_search.py
